# sawi-app-wasmos-macro

./: Cargo.toml
src/: gql.rs  lib.rs  sql.rs
src/gql/: handler.rs  mod.rs  object.rs
src/sql/: mod.rs  select_from.rs  table.rs
