[package]
name = "wasmos-macro"
version = "0.0.1"
description = "wasm runtime OS for web server"
authors = ["Mohamed Dardouri <med@dardouri.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sawi-app/wasmos-macro.git"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
field_types = "1.1.0"
